<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/background"
tools:context=".ui.marketplace.marketplaceFragment">

    <TextView
        android:id="@+id/textViewMarketplaceName"
        style="@style/LargeTextView"
        android:layout_marginTop="20dp"
        android:text="Marketplace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonMarketplaceDescuentos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="50dp"
        android:text="@string/discounts"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMarketplaceName"
        style="@style/LargeButtonText"
        android:textColor="@color/white"/>

    <!--<Button
        android:id="@+id/button"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonMarketplaceDescuentos"/>

    <Button
        android:id="@+id/button2"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="275dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/buttonMarketplaceDescuentos"
        tools:layout_editor_absoluteX="0dp" />-->

    <TextView
        android:id="@+id/textView7"
        android:translationZ="90dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Puntos"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMarketplaceDescuentos" />

    <TextView
        android:id="@+id/textViewMarketplace1000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="15dp"
        android:text="1000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textViewMarketplace2000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="2000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textViewMarketplace6000"
        app:layout_constraintStart_toEndOf="@+id/textViewMarketplace1000"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textViewMarketplace6000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:text="6000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ImageButton
        android:id="@+id/imageViewBuy2000Points"
        android:background="@drawable/button_marketplace"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/coin_stack_1"
        android:adjustViewBounds="true"
        android:padding="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/imageViewBuy6000Points"
        app:layout_constraintStart_toEndOf="@+id/imageViewBuy1000Points"
        app:layout_constraintTop_toBottomOf="@+id/textViewMarketplace2000" />

    <ImageButton
        android:id="@+id/imageViewBuy6000Points"
        android:background="@drawable/button_marketplace"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:src="@drawable/coins_1"
        android:adjustViewBounds="true"
        android:padding="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMarketplace6000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <View
            android:layout_width="320dp"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:layout_marginTop="144dp"
            android:background="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <View
            android:layout_width="320dp"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:layout_marginTop="404dp"
            android:background="@color/white" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/imageViewBuy1000Points"
        android:background="@drawable/button_marketplace"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/coin_1"
        android:adjustViewBounds="true"
        android:padding="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMarketplace1000" />

    <TextView
        android:id="@+id/textViewMarketplace3e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="5dp"
        android:text="3€"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBuy1000Points" />

    <TextView
        android:id="@+id/textViewMarketplace5e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="5€"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textViewMarketplace12e"
        app:layout_constraintStart_toEndOf="@+id/textViewMarketplace3e"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBuy2000Points" />

    <TextView
        android:id="@+id/textViewMarketplace12e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:text="12€"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBuy6000Points" />

    <TextView
        android:id="@+id/textViewMarketplaceBoostTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Boosts"
        android:translationZ="90dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMarketplace5e" />

    <TextView
        android:id="@+id/textViewMarketplaceBoost2w"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="15dp"
        android:text="x2 Sem"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMarketplaceBoostTitle" />

    <TextView
        android:id="@+id/textViewMarketplace5w"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="85dp"
        android:text="x5 sem"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMarketplaceBoostTitle" />

    <ImageButton
        android:id="@+id/imageViewBuyBoost2w"
        android:background="@drawable/button_marketplace"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/fireworks_1"
        android:adjustViewBounds="true"
        android:padding="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMarketplaceBoost2w" />

    <ImageButton
        android:id="@+id/imageViewBuyBoost5w"
        android:background="@drawable/button_marketplace"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="75dp"
        android:src="@drawable/startup_1"
        android:adjustViewBounds="true"
        android:padding="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMarketplace5w" />

    <TextView
        android:id="@+id/textViewMarketplaceBoostPrice2000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="5dp"
        android:text="2000 pts"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBuyBoost2w" />

    <TextView
        android:id="@+id/textViewMarketplaceBoostPrice6000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="70dp"
        android:text="6000 pts"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBuyBoost5w" />

    <TextView
        android:id="@+id/textViewMarketplacePTS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMarketplaceBoostPrice2000" />

    <ProgressBar
        android:id="@+id/progressBarMarketPlace"
        style="?android:attr/progressBarStyle"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>
